Change contact details in the TODO file

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 This file contains known bugs and a list of features and additions that may make the program better and/or more usable.
 
-Suggestions can be sent to:  i(dot)cullen(at)surrey(dot)ac(dot)uk
+Suggestions can be sent to:  ian(dot)james(dot)cullen(at)gmail(dot)com
 
 
 ==========
