--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 
-		INCH Installation
+			INCH Installation
 
 The standard "make" should suffice, this will create the executable
 in the ./bin/ directory. The executable reads files located in
@@ -11,13 +11,13 @@ tikz file can also be created but will only have the basic features.
 To alter the file type that is produced, the following line must be changed,
 and the program re-compiled.
 
-    $ grep -n file_type src/inputs.cpp 
+    $ grep -n 'file_type' src/inputs.cpp 
     58:  file_type         = 0;       // 0=eps, 1=svg, 2=tikz;
 
 
-The script "convert_chart.sh" is a BASH script that uses ghostscript and
-rsvg-convert (provided through librsvg2) to carry out the following file
-conversions:
+The script "convert_chart.sh" is a BASH script that uses gs (provides through
+ghostscript) and rsvg-convert (provided through librsvg2) to carry out the
+following file conversions:
 
      eps -> png,jpg,pdf
      svg -> pdf
