--- a/INSTALL
+++ b/INSTALL
@@ -6,8 +6,8 @@ in the ./bin/ directory. The executable reads files located in
 <install path>/data_files/ so can be moved into your $PATH if required.
 There is no "make install" currently implemented.
 
-Full functionality is available when created an eps file, either a svg or 
-tikz file can also be created but will only have the basic features.
+Full functionality is available when creating an eps file, either a svg or 
+tikz file can also be created but will only have basic features.
 To alter the file type that is produced, the following line must be changed,
 and the program re-compiled.
 
