Tidy up reading of user defined file containing their nuclei in readOWN() and add bug about the reading. Set a more logical return type for validatInputArguments().

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ Known Bugs
 
 - convertFloatToExponent assumes that the value of the float will be <1 as was written with dm/m in mind. 
 
+- The format of the data file containing user defined nuclei is not check/validated.
+
 =================================
 Possible improvements/alterations (in no particlar order)
 =================================
