--- a/TODO
+++ b/TODO
@@ -16,14 +16,20 @@ as was written with dm/m in mind.
 check/validated.
 
 ================================
-Things that need to be looked AT (Not quite bugs)
+Things that need to be looked at (Not quite bugs)
 ================================
 
-- The popualtion of the 'decay' member of an isotope needs to be looked
-at in realtion to isotopes that have many different values/possibilities
+- The population of the 'decay' member of an isotope needs to be looked
+at in relation to isotopes that have many different values/possibilities
+
+- The fonts used in the eps version of the charts are not easily available
+with the version of texlive that comes with fedora. Thus, if used in a
+latex document and the user does dvi->ps (using dvips) characters can get
+'lost'. This is most obvious in the key. Not sure if this is an issue with
+INCH or just an artefact of the licensing rules that fedora follow.
 
 =================================
-Possible improvements/alterations (in no particlar order)
+Possible improvements/alterations (in no particular order)
 =================================
 
 - The default EPS file is automatically overwritten if no output file is given.
@@ -45,12 +51,12 @@ list actually is.
 - If the nuclei also decays via another branch with a non negligible fraction
 (>5%) alter how it is displayed (may need to be quantitative, could get messy).
 
-- Write isotopic abundances in the stable istopes, again could get messy.
+- Write isotopic abundances in the stable isotopes, again could get messy.
 
 - Have option to print out the details for a specific isotope. The information
 is already collected, this could be an option at the start.
 Either draw a chart or get info for an isotope.
 
 - Add comments about how to alter the text in the box. Perhaps make a guide,
-explaining both the basics of the postscipt code and how to make changes once
+explaining both the basics of the postscript code and how to make changes once
 the chart is created.
