--- a/TODO
+++ b/TODO
@@ -15,6 +15,11 @@ as was written with dm/m in mind.
 - The format of the data file containing user defined nuclei is not
 check/validated.
 
+- The options to the questions asked at runtime vary depending on certain
+options, e.g. theoretical only values removes option to show isomers, or
+using AME limits to mass excess and dm/m. When checking the input file,
+these factors are not taken into effect.
+
 ================================
 Things that need to be looked at (Not quite bugs)
 ================================
