--- a/TODO
+++ b/TODO
@@ -24,6 +24,10 @@ these factors are not taken into effect.
 Things that need to be looked at (Not quite bugs)
 ================================
 
+- In createDripLineFile we use a Nuclide object to store A,Z,N,ME & drip
+line values (4 doubles). This is a big object for 8 values, may be better
+to create a local struct to store this.
+
 - The population of the 'decay' member of an isotope needs to be looked
 at in relation to isotopes that have many different values/possibilities
 
