Alter contact info.

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 This file contains known bugs and a list of features and additions that
 may make the program better and/or more usable.
 
-Suggestions can be sent to:  ian(dot)james(dot)cullen(at)gmail(dot)com
+Suggestions can be sent via github - https://github.com/php1ic/inch
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ==========
