Unnecessarliy big objects are no longer used so remove from TODO.
Whilst fixing about, noticed that large objects may be being passed
around when single values are all that is meeded. Add this to TODO.

--- a/TODO
+++ b/TODO
@@ -24,9 +24,8 @@ these factors are not taken into effect.
 Things that need to be looked at (Not quite bugs)
 ================================
 
-- In createDripLineFile we use a Nuclide object to store A,Z,N,ME & drip
-line values (4 doubles). This is a big object for 8 values, may be better
-to create a local struct to store this.
+- After refactoring, we may be passing large objects around unnecessarily,
+particularly std::vector<Nuclide>.
 
 - The population of the 'decay' member of an isotope needs to be looked
 at in relation to isotopes that have many different values/possibilities
